--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "@octoblu/redis-ns": "^1.2.0",
+    "async": "^1.5.2",
+    "commander": "^2.9.0",
     "fakeredis": "^1.0.2",
     "lodash": "^4.0.0",
     "redis": "^2.4.2"
