--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/octoblu/credentials-worker#readme",
   "devDependencies": {
+    "@octoblu/shmock": "^0.7.2",
     "chai": "^3.4.1",
     "coffee-coverage": "^1.0.1",
     "coffee-script": "^1.10.0",
@@ -24,7 +25,8 @@
     "mocha": "^2.3.4",
     "mocha-istanbul": "^0.2.0",
     "sinon": "^1.17.2",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "uuid": "^2.0.1"
   },
   "dependencies": {
     "@octoblu/redis-ns": "^1.2.0",
@@ -32,6 +34,8 @@
     "commander": "^2.9.0",
     "fakeredis": "^1.0.2",
     "lodash": "^4.0.0",
+    "meshblu-config": "^3.1.1",
+    "meshblu-http": "^5.0.2",
     "redis": "^2.4.2"
   }
 }
