--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@octoblu/credentials-worker",
-  "version": "2.1.6",
+  "version": "3.0.0",
   "description": "Credentials worker",
   "main": "index.js",
   "scripts": {
@@ -30,11 +30,12 @@
   },
   "dependencies": {
     "@octoblu/redis-ns": "^1.2.0",
-    "coffee-script": "^1.10.0",
     "async": "^1.5.2",
+    "coffee-script": "^1.10.0",
     "commander": "^2.9.0",
     "lodash": "^4.0.0",
     "meshblu-config": "^3.1.1",
+    "meshblu-core-job-manager": "^3.1.8",
     "meshblu-http": "^5.0.2",
     "mongojs": "^2.3.0",
     "redis": "^2.4.2"
